Add font-family in common css

--- a/src/frontend/src/assets/css/fonts.css
+++ b/src/frontend/src/assets/css/fonts.css
@@ -1,9 +1,19 @@
 @font-face {
   font-family: 'Doctum Bold';
-  src: url('../fonts/KoPub Dotum Bold.ttf') format('truetype');
+  src: url('../fonts/Jalnan.ttf') format('truetype');
 }
 
 @font-face {
   font-family: 'Doctum Light';
-  src: url('../fonts/KoPub Dotum Light.ttf') format('truetype');
+  src: url('../fonts/Jalnan.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Player Title';
+  src: url('../fonts/NotoSansKR-ExtraBold.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Tier Title';
+  src: url('../fonts/NotoSansKR-Regular.ttf') format('truetype');
 }
